# RuneChat

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  Makefile  ORG_README.md  README.md  docker-compose.prod.yml  docker-compose.yml
.gitea/workflows/: backend.yml  build.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend.yml  build.yml  issue-platform-labels.yml  release.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 20260418000001_extensions.sql  20260418000002_users.sql  20260418000003_servers.sql  20260418000004_channels.sql  20260418000005_messages.sql  20260418000006_invites.sql  20260418000007_totp_uniqueness.sql  20260418000008_email_citext.sql  20260418000009_invite_constraints.sql  20260422000010_security_hardening.sql
backend/src/: audit.rs  config.rs  error.rs  lib.rs  main.rs  pwned.rs  rate_limit.rs  state.rs
backend/src/api/: auth.rs  channels.rs  health.rs  invites.rs  messages.rs  mod.rs  servers.rs
backend/src/auth/: email.rs  middleware.rs  password.rs  tokens.rs  totp.rs
backend/src/db/: migrate.rs
backend/src/realtime/: broker.rs  ws.rs
backend/tests/: auth_regression.rs  migrate.rs
db/: Dockerfile  docker-entrypoint.sh
deploy/: Makefile  README.md  build-truenas-images.sh  cloudflared-config.yml  docker-compose.truenas-build.yml  docker-compose.truenas-custom-app.yml  docker-compose.truenas.yml  prod.conf  truenas.sh
docs/: deploy-truenas.md  forum-post-cauldron.md  forum-post-runechat.md  public-deployment-security-checklist.md  release-checklist.md
docs/superpowers/plans/: 2026-04-17-plan-01-scaffolding.md  2026-04-18-plan-02-database-foundations.md  2026-04-19-plan-08-server-succession.md  2026-04-19-plan-cve-review.md  2026-04-22-android-testing-setup.md  2026-04-22-plan-12-rebrand-cauldron.md  2026-04-22-plan-13-member-list-default-channels.md
docs/superpowers/specs/: 2026-04-17-runechat-architecture-foundation-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts
frontend/src/components/: ChannelCreateModal.tsx  ChannelList.tsx  CompromisedBanner.tsx  InviteModal.tsx  MessageInput.tsx  MessageList.tsx  ServerCreateModal.tsx  ServerList.tsx  Updater.tsx
frontend/src/hooks/: useMessages.ts  useUpdater.ts  useWebSocket.ts
frontend/src/pages/: ChatPage.tsx  InvitePage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/stores/: authStore.ts  uiStore.ts
nginx/: dev.conf  prod.conf
redteam/: README.md  conftest.py
redteam/rtlib/: client.py
redteam/tests/: test_2fa_lockout.py  test_auth_tokens.py  test_authorization.py  test_infrastructure.py  test_input_injection.py  test_realtime.py
