[package]
name = "cauldron-backend"
version = "0.1.4"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
jsonwebtoken = "9"
argon2 = "0.5"
rand = { version = "0.8", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
totp-rs = { version = "5", features = ["qr"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
base64 = "0.21"
unicode-normalization = "0.1"
dashmap = "5"
futures-util = "0.3"
governor = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha1 = "0.10"

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "macros"] }
wiremock = "0.6"
