[package]
name = "cauldron"
version = "0.1.0"
description = "Cauldron — Cross-platform chat client"
authors = ["MoonRune Inc. <dev@moonrune.cc>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cauldron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[features]
default = ["updater"]
updater = ["dep:tauri-plugin-updater"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tauri-plugin-updater = { version = "2", optional = true }
